# bdk_practice

./: Cargo.toml
src/: main.rs
src/wallet/: error.rs  fidelity.rs  keychain_kind.rs  mod.rs  signer.rs  store.rs  swapcoin.rs
wallets/: wallet-1
