[package]
name = "bdk-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_chain = {version = "0.11.0", features = ["serde"]}
bdk = "0.29"
bitcoin = {version = "0.30.2", features = ["serde"] }
bitcoind = "0.32"
bip39 = {version = "1.0.1", features = ["rand"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_cbor = "0.11.2"